--- a/analizy/mpj-2024/mixty-template.tex
+++ b/analizy/mpj-2024/mixty-template.tex
@@ -14,10 +14,10 @@
     
 \pagebreak
 \section*{Rozdanie 1}
-\handdiagramv{\vhand{T8542}{K3}{KJ3}{KJ7}}
-{\vhand{Q7}{A2}{T9765}{Q963}}
-{\vhand{93}{QJ985}{Q42}{852}}
-{\vhand{AKJ6}{T764}{A8}{AT4}}
+\handdiagramv{\vhand{AK85}{75}{JT43}{Q93}}
+{\vhand{QT4}{K32}{A982}{764}}
+{\vhand{J3}{JT64}{KQ75}{J85}}
+{\vhand{9762}{AQ98}{6}{AKT2}}
 {}
 
 \begin{table}[h!]
@@ -30,10 +30,10 @@
 
 \pagebreak
 \section*{Rozdanie 2}
-\handdiagramv{\vhand{J6532}{5}{KJ6}{KQ53}}
-{\vhand{874}{AK843}{Q82}{97}}
-{\vhand{KT9}{JT97}{T743}{84}}
-{\vhand{AQ}{Q62}{A95}{AJT62}}
+\handdiagramv{\vhand{JT6}{AJT985}{A6}{A2}}
+{\vhand{Q92}{62}{985}{T9654}}
+{\vhand{8754}{Q743}{Q32}{83}}
+{\vhand{AK3}{K}{KJT74}{KQJ7}}
 {NS}
 
 \begin{table}[h!]
@@ -46,10 +46,10 @@
 
 \pagebreak
 \section*{Rozdanie 3}
-\handdiagramv{\vhand{AQ65}{Q97}{K82}{J97}}
-{\vhand{9842}{AKT54}{Q9}{64}}
-{\vhand{3}{J632}{J654}{AQT5}}
-{\vhand{KJT7}{8}{AT73}{K832}}
+\handdiagramv{\vhand{KQJ2}{A874}{}{T9742}}
+{\vhand{A986}{KT32}{J87}{Q5}}
+{\vhand{T}{J9}{KQT543}{AJ83}}
+{\vhand{7543}{Q65}{A962}{K6}}
 {EW}
 
 \begin{table}[h!]
@@ -62,10 +62,10 @@
 
 \pagebreak
 \section*{Rozdanie 4}
-\handdiagramv{\vhand{AKT5}{63}{Q73}{7543}}
-{\vhand{Q64}{J98}{AJ6}{AJT6}}
-{\vhand{8732}{QT54}{852}{K9}}
-{\vhand{J9}{AK72}{KT94}{Q82}}
+\handdiagramv{\vhand{J2}{KQT83}{Q86}{A98}}
+{\vhand{T97}{9742}{K9}{Q643}}
+{\vhand{K53}{AJ65}{AJ32}{T7}}
+{\vhand{AQ864}{}{T754}{KJ52}}
 {NSEW}
 
 \begin{table}[h!]
@@ -78,10 +78,10 @@
 
 \pagebreak
 \section*{Rozdanie 5}
-\handdiagramv{\vhand{K5}{A7}{987632}{J54}}
-{\vhand{AQ82}{J4}{AKT}{KQT8}}
-{\vhand{3}{K96532}{Q5}{9632}}
-{\vhand{JT9764}{QT8}{J4}{A7}}
+\handdiagramv{\vhand{A32}{T93}{T954}{976}}
+{\vhand{K6}{A2}{KQJ32}{K842}}
+{\vhand{JT74}{J6}{A8}{AQJT3}}
+{\vhand{Q985}{KQ8754}{76}{5}}
 {NS}
 
 \begin{table}[h!]
@@ -94,10 +94,10 @@
 
 \pagebreak
 \section*{Rozdanie 6}
-\handdiagramv{\vhand{T74}{763}{76432}{65}}
-{\vhand{9852}{AQ5}{Q95}{AKQ}}
-{\vhand{AQ63}{KJ84}{J}{9843}}
-{\vhand{KJ}{T92}{AKT8}{JT72}}
+\handdiagramv{\vhand{T63}{KQT3}{A2}{J863}}
+{\vhand{K97}{972}{KQJ96}{K5}}
+{\vhand{Q8542}{A6}{753}{AT7}}
+{\vhand{AJ}{J854}{T84}{Q942}}
 {EW}
 
 \begin{table}[h!]
@@ -110,10 +110,10 @@
 
 \pagebreak
 \section*{Rozdanie 7}
-\handdiagramv{\vhand{T84}{J}{AKJ943}{J53}}
-{\vhand{K532}{Q975}{7}{T742}}
-{\vhand{AQ6}{AKT8}{852}{AKQ}}
-{\vhand{J97}{6432}{QT6}{986}}
+\handdiagramv{\vhand{AK96}{AK3}{J4}{9754}}
+{\vhand{Q43}{JT}{AQT765}{A6}}
+{\vhand{87}{Q876542}{K2}{K2}}
+{\vhand{JT52}{9}{983}{QJT83}}
 {NSEW}
 
 \begin{table}[h!]
@@ -126,10 +126,10 @@
 
 \pagebreak
 \section*{Rozdanie 8}
-\handdiagramv{\vhand{A9654}{542}{Q54}{K6}}
-{\vhand{3}{QT63}{AKJT976}{5}}
-{\vhand{QJT872}{AKJ}{}{QJT8}}
-{\vhand{K}{987}{832}{A97432}}
+\handdiagramv{\vhand{AJ92}{42}{KT76}{A87}}
+{\vhand{KT84}{T8}{J953}{642}}
+{\vhand{Q765}{K765}{42}{QT5}}
+{\vhand{3}{AQJ93}{AQ8}{KJ93}}
 {}
 
 \begin{table}[h!]
@@ -142,10 +142,10 @@
 
 \pagebreak
 \section*{Rozdanie 9}
-\handdiagramv{\vhand{J7}{KQJ}{AT765}{AJT}}
-{\vhand{T94}{T754}{J93}{952}}
-{\vhand{KQ83}{93}{K84}{8763}}
-{\vhand{A652}{A862}{Q2}{KQ4}}
+\handdiagramv{\vhand{AQ763}{T6}{J53}{K83}}
+{\vhand{KJT42}{K43}{A7}{Q96}}
+{\vhand{985}{Q72}{8642}{J74}}
+{\vhand{}{AJ985}{KQT9}{AT52}}
 {EW}
 
 \begin{table}[h!]
@@ -158,10 +158,10 @@
 
 \pagebreak
 \section*{Rozdanie 10}
-\handdiagramv{\vhand{KJ762}{A6}{AT43}{Q5}}
-{\vhand{98}{QJ}{QJ7}{AT9763}}
-{\vhand{QT43}{T973}{K92}{42}}
-{\vhand{A5}{K8542}{865}{KJ8}}
+\handdiagramv{\vhand{AQT}{}{KQJ63}{AT964}}
+{\vhand{6}{AKQ853}{AT87}{KQ}}
+{\vhand{K8543}{T76}{954}{83}}
+{\vhand{J972}{J942}{2}{J752}}
 {NSEW}
 
 \begin{table}[h!]
@@ -174,10 +174,10 @@
 
 \pagebreak
 \section*{Rozdanie 11}
-\handdiagramv{\vhand{AT}{A42}{AQT74}{AQ3}}
-{\vhand{5}{KJ76}{J93}{J9654}}
-{\vhand{Q9763}{Q9853}{6}{K2}}
-{\vhand{KJ842}{T}{K852}{T87}}
+\handdiagramv{\vhand{K87}{J742}{K865}{63}}
+{\vhand{JT532}{8}{AT73}{AK2}}
+{\vhand{Q6}{AQT}{QJ942}{Q94}}
+{\vhand{A94}{K9653}{}{JT875}}
 {}
 
 \begin{table}[h!]
@@ -190,10 +190,10 @@
 
 \pagebreak
 \section*{Rozdanie 12}
-\handdiagramv{\vhand{Q6}{953}{AQ92}{A864}}
-{\vhand{J987}{AK762}{3}{QT7}}
-{\vhand{AT5}{QJT8}{J84}{K32}}
-{\vhand{K432}{4}{KT765}{J95}}
+\handdiagramv{\vhand{AK4}{Q4}{JT}{AQ9653}}
+{\vhand{3}{AT97532}{Q932}{4}}
+{\vhand{T986}{KJ6}{AK754}{7}}
+{\vhand{QJ752}{8}{86}{KJT82}}
 {NS}
 
 \begin{table}[h!]
@@ -206,10 +206,10 @@
 
 \pagebreak
 \section*{Rozdanie 13}
-\handdiagramv{\vhand{KT5}{JT4}{K832}{862}}
-{\vhand{AQ74}{A87}{A54}{KJ3}}
-{\vhand{93}{Q932}{JT97}{QT7}}
-{\vhand{J862}{K65}{Q6}{A954}}
+\handdiagramv{\vhand{AJ3}{K4}{KQT965}{T5}}
+{\vhand{Q74}{J98763}{J3}{Q7}}
+{\vhand{KT8}{QT2}{7}{AK9643}}
+{\vhand{9652}{A5}{A842}{J82}}
 {NSEW}
 
 \begin{table}[h!]
@@ -222,10 +222,10 @@
 
 \pagebreak
 \section*{Rozdanie 14}
-\handdiagramv{\vhand{532}{J2}{A94}{KJ863}}
-{\vhand{T984}{AK53}{T3}{A72}}
-{\vhand{AK6}{T9}{KQ7652}{94}}
-{\vhand{QJ7}{Q8764}{J8}{QT5}}
+\handdiagramv{\vhand{J6432}{JT5}{62}{T83}}
+{\vhand{A}{Q632}{T83}{QJ964}}
+{\vhand{KT875}{K8}{A74}{AK5}}
+{\vhand{Q9}{A974}{KQJ95}{72}}
 {}
 
 \begin{table}[h!]
@@ -238,10 +238,10 @@
 
 \pagebreak
 \section*{Rozdanie 15}
-\handdiagramv{\vhand{T984}{A82}{JT}{T642}}
-{\vhand{Q63}{KJ7}{A74}{AJ87}}
-{\vhand{K52}{Q653}{Q8532}{K}}
-{\vhand{AJ7}{T94}{K96}{Q953}}
+\handdiagramv{\vhand{Q98}{}{T7}{AKJT9842}}
+{\vhand{A52}{QT85}{852}{Q76}}
+{\vhand{KJ64}{AKJ96}{KJ63}{}}
+{\vhand{T73}{7432}{AQ94}{53}}
 {NS}
 
 \begin{table}[h!]
@@ -254,10 +254,10 @@
 
 \pagebreak
 \section*{Rozdanie 16}
-\handdiagramv{\vhand{JT5}{872}{9865}{A72}}
-{\vhand{A4}{J95}{QJ7}{KJ965}}
-{\vhand{KQ962}{AK64}{A3}{43}}
-{\vhand{873}{QT3}{KT42}{QT8}}
+\handdiagramv{\vhand{753}{AT632}{Q3}{874}}
+{\vhand{K984}{KQ94}{A65}{AQ}}
+{\vhand{QJT}{J5}{KJ84}{JT62}}
+{\vhand{A62}{87}{T972}{K953}}
 {EW}
 
 \begin{table}[h!]
@@ -270,10 +270,10 @@
 
 \pagebreak
 \section*{Rozdanie 17}
-\handdiagramv{\vhand{T9}{AK64}{2}{AKQ864}}
-{\vhand{Q762}{J3}{J976}{JT9}}
-{\vhand{KJ54}{T987}{8543}{7}}
-{\vhand{A83}{Q52}{AKQT}{532}}
+\handdiagramv{\vhand{J53}{KT93}{43}{QJ96}}
+{\vhand{T82}{A52}{J987}{T52}}
+{\vhand{A976}{QJ64}{AKT6}{3}}
+{\vhand{KQ4}{87}{Q52}{AK874}}
 {}
 
 \begin{table}[h!]
@@ -286,10 +286,10 @@
 
 \pagebreak
 \section*{Rozdanie 18}
-\handdiagramv{\vhand{AQ64}{54}{KQT65}{T3}}
-{\vhand{T9}{KQJ}{A974}{KJ62}}
-{\vhand{KJ752}{T9632}{J32}{}}
-{\vhand{83}{A87}{8}{AQ98754}}
+\handdiagramv{\vhand{J95}{T643}{JT75}{KJ}}
+{\vhand{Q7}{AQJ9}{AK862}{76}}
+{\vhand{KT863}{}{Q3}{T98543}}
+{\vhand{A42}{K8752}{94}{AQ2}}
 {NS}
 
 \begin{table}[h!]
@@ -302,10 +302,10 @@
 
 \pagebreak
 \section*{Rozdanie 19}
-\handdiagramv{\vhand{J8532}{KJ}{KJ9}{J92}}
-{\vhand{KQ6}{AQ653}{AQ42}{7}}
-{\vhand{T74}{942}{853}{QT64}}
-{\vhand{A9}{T87}{T76}{AK853}}
+\handdiagramv{\vhand{843}{AK2}{T853}{Q92}}
+{\vhand{Q95}{T86}{QJ2}{AJ64}}
+{\vhand{A762}{QJ97}{AK6}{73}}
+{\vhand{KJT}{543}{974}{KT85}}
 {EW}
 
 \begin{table}[h!]
@@ -318,10 +318,10 @@
 
 \pagebreak
 \section*{Rozdanie 20}
-\handdiagramv{\vhand{T976}{9}{KJ8765}{T2}}
-{\vhand{843}{QJ842}{43}{J85}}
-{\vhand{QJ}{A7653}{AQ}{AK43}}
-{\vhand{AK52}{KT}{T92}{Q976}}
+\handdiagramv{\vhand{AK54}{KT932}{AK7}{9}}
+{\vhand{7}{}{QT9832}{AT8763}}
+{\vhand{Q632}{AQJ54}{6}{KJ2}}
+{\vhand{JT98}{876}{J54}{Q54}}
 {NSEW}
 
 \begin{table}[h!]
@@ -334,10 +334,10 @@
 
 \pagebreak
 \section*{Rozdanie 21}
-\handdiagramv{\vhand{AJ4}{A85}{QJT7}{864}}
-{\vhand{KQ8765}{KJ93}{}{T97}}
-{\vhand{T93}{QT2}{K965}{KQJ}}
-{\vhand{2}{764}{A8432}{A532}}
+\handdiagramv{\vhand{J864}{}{AT9875}{A83}}
+{\vhand{A95}{AQJ6}{J6}{K942}}
+{\vhand{T732}{KT973}{32}{T6}}
+{\vhand{KQ}{8542}{KQ4}{QJ75}}
 {NS}
 
 \begin{table}[h!]
@@ -350,10 +350,10 @@
 
 \pagebreak
 \section*{Rozdanie 22}
-\handdiagramv{\vhand{A5}{AJ87}{J842}{AT9}}
-{\vhand{KQJ3}{92}{KT}{KQJ65}}
-{\vhand{8}{KQT5}{AQ975}{743}}
-{\vhand{T97642}{643}{63}{82}}
+\handdiagramv{\vhand{A76}{Q85}{76}{T9843}}
+{\vhand{T54}{T7643}{AQ9}{J6}}
+{\vhand{K932}{K}{KT8532}{K5}}
+{\vhand{QJ8}{AJ92}{J4}{AQ72}}
 {EW}
 
 \begin{table}[h!]
@@ -366,10 +366,10 @@
 
 \pagebreak
 \section*{Rozdanie 23}
-\handdiagramv{\vhand{9}{KQT9}{Q65}{AQT96}}
-{\vhand{QT62}{A865}{KJ84}{8}}
-{\vhand{}{J2}{AT93}{KJ75432}}
-{\vhand{AKJ87543}{743}{72}{}}
+\handdiagramv{\vhand{K8}{73}{KT96}{AJ764}}
+{\vhand{9532}{64}{4}{KQT932}}
+{\vhand{A6}{KT9852}{AQJ32}{}}
+{\vhand{QJT74}{AQJ}{875}{85}}
 {NSEW}
 
 \begin{table}[h!]
@@ -382,10 +382,10 @@
 
 \pagebreak
 \section*{Rozdanie 24}
-\handdiagramv{\vhand{T943}{765}{J2}{A943}}
-{\vhand{Q865}{A43}{T75}{K52}}
-{\vhand{KJ2}{KJ9}{K3}{QJ876}}
-{\vhand{A7}{QT82}{AQ9864}{T}}
+\handdiagramv{\vhand{AK832}{QT2}{T64}{K5}}
+{\vhand{QJT}{9753}{87}{A764}}
+{\vhand{75}{AKJ}{AK53}{QT83}}
+{\vhand{964}{864}{QJ92}{J92}}
 {}
 
 \begin{table}[h!]
@@ -398,10 +398,10 @@
 
 \pagebreak
 \section*{Rozdanie 25}
-\handdiagramv{\vhand{K752}{K3}{AQ5}{QJ93}}
-{\vhand{93}{872}{T6}{AK7642}}
-{\vhand{Q84}{QJT94}{J9}{T85}}
-{\vhand{AJT6}{A65}{K87432}{}}
+\handdiagramv{\vhand{AKQ9652}{75}{76}{64}}
+{\vhand{87}{K962}{A82}{KQ53}}
+{\vhand{J43}{84}{Q9543}{AJT}}
+{\vhand{T}{AQJT3}{KJT}{9872}}
 {EW}
 
 \begin{table}[h!]
@@ -414,10 +414,10 @@
 
 \pagebreak
 \section*{Rozdanie 26}
-\handdiagramv{\vhand{JT53}{JT873}{5}{AT2}}
-{\vhand{A74}{KQ2}{Q732}{J54}}
-{\vhand{K98}{A65}{AJ86}{987}}
-{\vhand{Q62}{94}{KT94}{KQ63}}
+\handdiagramv{\vhand{}{JT4}{KJT987}{AK65}}
+{\vhand{KJ3}{Q982}{64}{Q843}}
+{\vhand{T972}{653}{AQ53}{T7}}
+{\vhand{AQ8654}{AK7}{2}{J92}}
 {NSEW}
 
 \begin{table}[h!]
@@ -430,10 +430,10 @@
 
 \pagebreak
 \section*{Rozdanie 27}
-\handdiagramv{\vhand{KJ83}{AJ75}{QT4}{A2}}
-{\vhand{952}{863}{J82}{Q764}}
-{\vhand{QT64}{}{7653}{KJT98}}
-{\vhand{A7}{KQT942}{AK9}{53}}
+\handdiagramv{\vhand{KJ543}{32}{Q543}{AT}}
+{\vhand{A6}{KQJ8654}{J8}{94}}
+{\vhand{QT87}{9}{T96}{J8765}}
+{\vhand{92}{AT7}{AK72}{KQ32}}
 {}
 
 \begin{table}[h!]
@@ -446,10 +446,10 @@
 
 \pagebreak
 \section*{Rozdanie 28}
-\handdiagramv{\vhand{K432}{QJ42}{KT5}{Q3}}
-{\vhand{Q97}{T7}{986}{KJ864}}
-{\vhand{J5}{A85}{AJ7432}{AT}}
-{\vhand{AT86}{K963}{Q}{9752}}
+\handdiagramv{\vhand{Q}{JT86}{62}{A76532}}
+{\vhand{J76}{K754}{A953}{J9}}
+{\vhand{KT98}{Q3}{JT74}{KT8}}
+{\vhand{A5432}{A92}{KQ8}{Q4}}
 {NS}
 
 \begin{table}[h!]
@@ -462,10 +462,10 @@
 
 \pagebreak
 \section*{Rozdanie 29}
-\handdiagramv{\vhand{JT73}{T832}{97}{A84}}
-{\vhand{9}{97}{AK843}{KJT76}}
-{\vhand{AKQ}{AJ64}{J652}{Q9}}
-{\vhand{86542}{KQ5}{QT}{532}}
+\handdiagramv{\vhand{A43}{QJ53}{KT93}{95}}
+{\vhand{K987}{T6}{542}{QJ32}}
+{\vhand{Q2}{AK87}{J76}{KT74}}
+{\vhand{JT65}{942}{AQ8}{A86}}
 {NSEW}
 
 \begin{table}[h!]
@@ -478,10 +478,10 @@
 
 \pagebreak
 \section*{Rozdanie 30}
-\handdiagramv{\vhand{73}{Q9}{KT2}{KQJ984}}
-{\vhand{KJ86}{AJT8}{8653}{5}}
-{\vhand{AQT952}{4}{AQ7}{A73}}
-{\vhand{4}{K76532}{J94}{T62}}
+\handdiagramv{\vhand{KJ3}{J6}{K9654}{KT2}}
+{\vhand{AQ7542}{9532}{J3}{3}}
+{\vhand{T8}{QT7}{AT2}{QJ875}}
+{\vhand{96}{AK84}{Q87}{A964}}
 {}
 
 \begin{table}[h!]
