--- a/analizy/mpj-2024/mixty-template.tex
+++ b/analizy/mpj-2024/mixty-template.tex
@@ -2,7 +2,7 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage{import}
 
-\import{../lib/}{bridge.sty}
+\import{../../lib/}{bridge.sty}
 
 \title{Board Set Analysis}
 \author{... using MacaroniBridge/TCResultsParser}
