--- a/analizy/mpj-2024/pary-template.tex
+++ b/analizy/mpj-2024/pary-template.tex
@@ -2,7 +2,7 @@
 \documentclass[12pt, a4paper]{article}
 \usepackage{import}
 
-\import{../lib/}{bridge.sty}
+\import{../../lib/}{bridge.sty}
 
 \title{Board Set Analysis}
 \author{... using MacaroniBridge/TCResultsParser}
@@ -492,4 +492,4 @@
     \end{tabular}
 \end{table}
 
-
+\end{document}
