--- a/KrysiaBartek2024/analyses/tarnow_13_10_24.tex
+++ b/KrysiaBartek2024/analyses/tarnow_13_10_24.tex
@@ -8,7 +8,7 @@
 \begin{document}
 \maketitle
 
-\section*{Rozdanie 1} % 3ntS Qs -2
+\section*{Rozdanie 1}
 \handdiagramv{\vhand{976}{KJ92}{K4}{AK93}}
 {\vhand{T543}{A8543}{6}{875}}
 {\vhand{K}{QT}{Q98732}{QT62}}
@@ -21,7 +21,7 @@ Mogę wyciągnąć \xspades 8? Albo  w ogóle \xspades A? Szkoda, że nie pamię
 
 
 \pagebreak
-\section*{Rozdanie 2} % 4sN Jh +1
+\section*{Rozdanie 2}
 \handdiagramv{\vhand{AT854}{92}{AK93}{K8}}
 {\vhand{Q9}{JT53}{QJ4}{AJT2}}
 {\vhand{K763}{AKQ8}{62}{974}}
@@ -47,7 +47,7 @@ Dobra, zapytałam Oliwii, gość oddał 2 trefle XD Nieźle
 
 
 \pagebreak
-\section*{Rozdanie 3} % 4sE, 5d =
+\section*{Rozdanie 3}
 \handdiagramv{\vhand{A954}{96}{KJ86}{642}}
 {\vhand{KQT76}{8}{T42}{AKT3}}
 {\vhand{J2}{K754}{Q9753}{85}}
@@ -75,7 +75,7 @@ Ale w sumie mogłam 3\hearts zamiast 3\diams. Przedłużam kiery i widać, że s
 A Oliwia z renonsem i bez trzymania da [cośtam], to zagramy w te kiery.
 
 \pagebreak
-\section*{Rozdanie 4} % 3ntS, Ad -2
+\section*{Rozdanie 4}
 \handdiagramv{\vhand{K9}{K}{T52}{KQJ6532}}
 {\vhand{54}{J96}{QJ74}{T987}}
 {\vhand{QJ8762}{AT87}{86}{A}}
