--- a/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
+++ b/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
@@ -32,7 +32,7 @@
 [KG] Większość sali grała 2 lub 3\nt na naszej linii. 
 2\spades jest -1, przez
 nieuwagę nie obłożyliśmy, ale za -1 też byłby słaby zapis.
-Czy 2\nt na wznówce jest do gry...?
+Czy 2\nt na wznówce jest do gry...? Pewnie młode(?)
 
 \pagebreak
 \section*{Rozdanie 2}
@@ -166,7 +166,7 @@ stół, ale \nvul{N} zdecydował się atakować trefle.
 [KG] Po długim namyśle partner zdecydował się na 
 wrzucenie 6\nt -- po rozdaniu ustaliliśmy jak 
 sprawdzić młode po (2\major) 2\nt. Wist pikowy przejęłam
-królem, zaimpasowałam \diams, który ku mojemu wielkiemu zaskoceniu
+królem, zaimpasowałam K\diams, który ku mojemu wielkiemu zaskoczeniu
 stał (chociaż faktycznie otwierający coś tam na ten blok
 powinien niby mieć). W dodatku pan Henryk z jakiegoś
 powodu nie zagrał króla, dając mi, niestety
