--- a/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
+++ b/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
@@ -587,4 +587,26 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
 [KG] Pół sali grało 4 lub 5 \hearts z pałą, nam
 nie udało się wystarczająco sprowokować przeciwników...
 
+\pagebreak
+\section*{Rozdanie z turnieju czwartkowego 16.01.2025}
+\handdiagramh{\hhand{AQxx}{Axxxx}{J}{Axx}}{}
+{}{}
+{\hhand{KJxxxx}{-}{AKxxx}{xx}}{}
+{}{}
+{}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K)\\
+		  - & - & 2\spades & \pass \\
+          2\nt & \pass & 3\clubs & \pass \\
+          3\diams & \pass & 4\diams & \dbl \\
+          4\hearts & \pass & 5\hearts & \pass \\
+          5\nt & \pass & 6\hearts & \dbl \\
+          7\spades & \pass & \pass & \dbl \\
+          \rdbl & all \pass & & \\
+    \end{tabular}
+\end{table}
+
 \end{document}        
