--- a/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
+++ b/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
@@ -34,6 +34,10 @@
 nieuwagę nie obłożyliśmy, ale za -1 też byłby słaby zapis.
 Czy 2\nt na wznówce jest do gry...? Pewnie młode(?)
 
+[B] Wiemy, że mamy 23 pkt na linii, a dajemy przeciwnikowi grać 2\spades w zielonych. Przecież nawet 100 może być słabym zapisem! Trzeba cos zrobić, pała jest OK ale 2\nt lepsze, ze względu na bogatą w wysokie blotki kartę. Z niższymi blotkami X bardziej, bo 2\nt może się wywalać na sprzedanych złych podziałach.
+W rozgrywce przeciwnik przebił \xdiams3 czwórką kier, więc nie wsadziłem ósemki. Ale przynajmniej wist w trefla wyszedł.
+
+
 \pagebreak
 \section*{Rozdanie 2}
 \handdiagramv{\vhand{AJ85}{AJ6}{752}{932}}
@@ -58,6 +62,8 @@ drugą T\spades. Uznałam że trzeci K\spades u \nvul{W}
 jest bardzo prawdopodobny, jako że pokazał już
 (tylko) 2 blotki kier. Niestety król był drugi.
 
+[B] E spasował na otwarciu w korzystnych, co podnosi szanse na 3 trefle u W. Co dołożył E w pierwszej lewie? Jesli \xdiams 3 to koniec rozdania.
+
 \pagebreak
 \section*{Rozdanie 3}
 \handdiagramv{\vhand{AJ874}{QJ85}{J2}{J4}}
@@ -79,7 +85,7 @@ jest bardzo prawdopodobny, jako że pokazał już
 [KG] Zaalertowałam 2\diams jako Multi, bo wydawało mi się,
 że gramy Wilkoszem na 3-ciej ręce tylko w czerwonych.
 Przeciwnicy znaleźli się nieprzyjemnym kontrakcie z
-podziałem 5-1. Decyzją sędziego dostaliśmy wynik ważony.
+podziałem 5-1. Decyzją sędziego dostaliśmy wynik ważony. 
 
 \pagebreak
 \section*{Rozdanie 4}
@@ -105,6 +111,8 @@ znaleźli się w 1\nt. Rozgrywający pokazał
 2\spades, a partner przepuścił, dzięki czemu rozgrywający
 wziął pierwszą lewę na 7\spades. +2, 0\%.
 
+[B] Partner do zmiany.
+
 \pagebreak
 \section*{Rozdanie 5}
 \handdiagramv{\vhand{T865}{T85}{T4}{A764}}
@@ -117,10 +125,14 @@ wziął pierwszą lewę na 7\spades. +2, 0\%.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-		  -  & & & \\
-
+		  -  & \pass  & 1\nt & \pass \\
+		  \pass & \pass 	
     \end{tabular}
 \end{table}
+
+Wist \xhearts 6 wzięty w stole (1). Ze względu na brak komunikacji i tempa gra przez karo nie wygląda obiecująco. Zagrałem pika licząc na jaki komunikacyjny wpust S. Ten zabił i odszedł w pika (2).
+Teraz \xdiams K. S zabił i wyszedł w trefla do Asa (wyrzuciłem Q), N zagrał kiera, którego przepuciłem i wziąłem kolejnego (3). Teraz trefl, S wskoczył Królem, sciągnął kiera i wyszedł w trefla do J (4).
+Ściągnąłem \xspades Q (5) i niestety nie było przymusu (6). Noga warta chyba jakie 75\%.
 
 \pagebreak
 \section*{Rozdanie 6}
@@ -192,7 +204,7 @@ Co ciekawe, za 12 lew dostaliśmy ~30\%. Nikt nie wstawiał K\diams...?
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		\pass & 1\nt & \dbl & 2\clubs \\
+		\pass & 1\nt\alrt & \pass & 2\clubs \\
         \pass & 2\diams & \dbl & 2\spades \\
         all \pass & & & \\
     \end{tabular}
@@ -234,10 +246,14 @@ wziąć wszystkie lewy... To nie był wygrany stolik.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-		  -  &  -  & & \\
+		  -  &  -  & \pass & \pass \\
+		  1\hearts & 3\diams & \dbl & \pass \\
+		  4\hearts & 
 
     \end{tabular}
 \end{table}
+
+[B] Cwaniak zagrał kiera do 10 i kolejne 20\%
 
 \pagebreak
 \section*{Rozdanie 11}
@@ -251,10 +267,15 @@ wziąć wszystkie lewy... To nie był wygrany stolik.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		  -  &  -  &  -  & \\
+		  -  &  -  &  -  & \pass \\
+		  \pass & 1\spades& \pass& 1\nt \\
+		  \pass & 2\diams & \pass & 3\diams \\
 
     \end{tabular}
 \end{table}
+
+[B] Jakies 100\% totalnie z dupy, 3\diams (imo poprawne, widać że mają fit jakis) zablokowało przeciwnika.
+
 
 \pagebreak
 \section*{Rozdanie 12}
@@ -268,10 +289,14 @@ wziąć wszystkie lewy... To nie był wygrany stolik.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-		\\
+	1\nt & \pass & 2\clubs & \pass	\\
+	2\spades & \pass & 3\nt 
 
     \end{tabular}
 \end{table}
+
+Wist \xspades J. 11 lew, ale nie wiem co się działo.
+
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -294,7 +319,7 @@ wziąć wszystkie lewy... To nie był wygrany stolik.
 [KG] Przeciwnicy -- kompletny rozjazd. \vul{S} długo myślał
 nad ostatnim  pasem, więc i ja miałam czas do namysłu.
 Mam fit, możemy mieć bilans. Ale. Znając Bartka, z 
-dobrymi 17 punktami z 5 pikami, nigdy nie otworzy 1\nt.
+dobrymi 17 punktami z 5 pikami, nigdy nie otworzy 1\nt. \textbf{zniewaga}
 Ja mam K9 -- może mieć gorszą piątkę, lub 15-16pc.
 Mam drugą babcię w kolorze przeciwnika, którego
 Bartek nie chciał spałować, więc nie wygląda jakby miała wziąć.
@@ -304,6 +329,8 @@ może równie dobrze być u \vul{N} (żaden z nich nie pokazał
 kierów w licytacji). Bartek ma zapewne punkty w treflach,
 ale niekoniecznie długość. 3\spades było idealnym kontraktem,
 co się działo w rozgrywce -- nie wiem, ale wzięliśmy +1.
+
+[B] Dostałem wist w \xhearts 3 XD
 
 \pagebreak
 \section*{Rozdanie 14}
@@ -337,6 +364,8 @@ a \nvul{S} dołożył dwójkę, która powinna być ilościówką,
 a nie mogła być z dubla (\nvul{N} miałby H85), może
 singiel u \nvul{S} był do wymyślenia.
 
+[B] Nie masz wcale dużo na ten blok. W tej odzywce nie chodzi o to, żeby koniecznie wyłączyć przeciwnika z licytacji jeli masz 2PC. Bardziej o to, żeby znajdować takie \textbf{dobre końcówki} jak tu - wcale nie musisz mieć dubelka kier a po rebidzie 3\hearts jest słabo. Niestety w tym przypadku bezsystemie przynosiło 70\%.
+
 
 \pagebreak
 \section*{Rozdanie 15}
@@ -350,12 +379,15 @@ singiel u \nvul{S} był do wymyślenia.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-		  -  &  -  &  -  & \\
+		  -  &  -  &  -  & 1\clubs \\
+		  \pass & 1\spades & \pass & 2\diams \\
+		  \pass & 2\nt\alrt & \pass & 4\spades
 
     \end{tabular}
 \end{table}
 
 [Dlaczego oni grali w piki i czemu wzięli 11...?]
+Bo to nadal był ten smieszny pan na S.
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -369,10 +401,14 @@ singiel u \nvul{S} był do wymyślenia.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-		\\
+	  \pass & 1\nt & \dbl & 4\diams \\
+	  \pass & 4\hearts & \pass & \pass \\
+	  4\spades & \dbl & \pass & 5\hearts \\
 
     \end{tabular}
 \end{table}
+
+[B] W obronie partner do wymiany. W licytacji natomiast jesli już mamy dawać 4\spades to lepiej od razu, bo wtedy by se zajęli ze złej ręki, co może robić. Sama odzywka jest imo graniczna, dobre rozczytanie, że na pewno nie obłożymy (krótkoć pik lub 9 kierów u oppsa) i że 8 lew jest na pewno. Raczej na impy taką próbę można podjąć, bo 500 vs 450 to nie tak dużo. Na impy X też będzie trochę mocniejsza.
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -386,10 +422,10 @@ singiel u \nvul{S} był do wymyślenia.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		  -  & & & \\
-
+		  -  & 2\hearts & 2\spades & 4\hearts \\
     \end{tabular}
 \end{table}
+[B] Wist \xspades K. Rozgrywający zabił asem i oddał \hearts K. Ściągnęlimy młode figury, -2.
 
 \pagebreak
 \section*{Rozdanie 18}
@@ -403,10 +439,11 @@ singiel u \nvul{S} był do wymyślenia.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-		  -  &  -  & & \\
+		  -  &  -  & \pass & 4\hearts \\
 
     \end{tabular}
 \end{table}
+[B] Nothing hand. Pik, kier, karo, trefl na wiscie trafiony.
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -420,10 +457,17 @@ singiel u \nvul{S} był do wymyślenia.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-		  -  &  -  &  -  & \\
+		  -  &  -  &  -  & \pass \\
+		  1\hearts & 2\hearts & \dbl & 2\nt \\
+		  4\hearts & \pass & \pass & 4\spades \\
+		  \dbl & 5\clubs & \pass &\pass \\
+		  \dbl
 
     \end{tabular}
 \end{table}
+
+[B] X bez alertu, bez zawahania, ``Nie, nie wygrasz 2\hearts''. Z licytacją S się zgadzam. Wyniosłem, bo po takiej sekwencji wygląda, jakby piki się nie dzieliły i chcę uniknąć jakiego skrótowego disastera.
+
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -466,6 +510,8 @@ singiel u \nvul{S} był do wymyślenia.
 potem uzgodniliśmy, lepszy byłby pas na 4\nt i
 pała (atakująco-obronna?) na 5\clubs.
 
+[BS] Nie no chyba jest git. Teraz widzę, że karta raczej nie wygląda na 11 lew w kiery, szczególnie że te są pewnie 4-0. Trzeba zatłuc 5m. W mógł zrobić pięknego false-carda damą karo w pierwszej lewie, wtedy przebitka nie do wymylenia.
+
 \pagebreak
 \section*{Rozdanie 22}
 \handdiagramv{\vhand{43}{754}{QJT85}{AJT}}
@@ -494,6 +540,8 @@ w tym rozdaniu darmową lewę. Swoje -- 2 kara i 2 trefle.
 
 A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
 
+[B] Tak, 2\spades lepsze.
+
 \pagebreak
 \section*{Rozdanie 23}
 \handdiagramv{\vhand{3}{Q82}{985432}{AK5}}
@@ -506,10 +554,14 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-		  -  &  -  &  -  & \\
+		  -  &  -  &  -  &  \pass \\
+		  \pass & 3\diams 
 
     \end{tabular}
 \end{table}
+
+[B] Brzydka i silna ta karta, ale na 2\spades oppsów muszę się odezwać. Otwieramy w każde 6 pików, więc przegrywam tylko jak trafię u partnerki 5 pików, singla i dużo pkt. Trafiłem za 37\%. Imo w pytę.
+
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -523,10 +575,12 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		\\
+		1\spades & \pass & 4\spades \\
 
     \end{tabular}
 \end{table}
+
+[B] Wejcie jest obowiązkowe. W najgorszym wypadku 300, ale przeważnie do chodzącej końcówki. Fit dostajesz na 90\% bo często wejdę 2\nt z singlem kier. 
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -540,10 +594,13 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-		  -  & & & \\
+		  -  & 2\diams & \pass & 2\hearts  \\
+		  3\clubs
 
     \end{tabular}
 \end{table}
+
+[B] Nic ciekawego.
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -557,10 +614,16 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-		  -  &  -  & & \\
+		  -  &  -  & \pass & 1\clubs \\
+		  \dbl & \pass & 1\hearts & \dbl \\
+		  \pass & 4\spades
 
     \end{tabular}
 \end{table}
+
+[B] Trochę może swir, bo S na kontrę nie musi mieć nie wiadomo jakich nadwyżek. Ale to wygląda na jedyny grywalny kontrakt. Nikt na sali się nie odważył, grano jakies 3\nt z obory wyjęte.
+Może mogłem pomysleć, żeby ustawić kontrującego na wiscie, tylko jak? I tak przegram, ale obrona będzie musiała cos pograć.
+
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -574,18 +637,19 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} (B) & \nvul{E} & \nvul{S} (K)\\
-		  -  &  -  &  -  & \\
-          ?? & & & \\
-          ? & 4\spades & \pass & 4\nt \\
+		  -  &  -  &  -  & \pass \\
+          \pass & 1\clubs & \dbl & \rdbl \\
+          1\spades & 2\hearts & 2\spades & 3\hearts \\
+          3\spades & 4\spades & \pass & 4\nt \\
           \pass & 5\clubs & \pass & 5\hearts \\
           all \pass & & & \\
     \end{tabular}
 \end{table}
 
-[yyy co to były za dymy w licytacji???]
-
 [KG] Pół sali grało 4 lub 5 \hearts z pałą, nam
 nie udało się wystarczająco sprowokować przeciwników...
+
+[BS] \rdbl fuj.
 
 \pagebreak
 \section*{Rozdanie z turnieju czwartkowego 16.01.2025}
