--- a/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
+++ b/KrysiaBartek2024/analyses/zaczek_15_01_25.tex
@@ -32,10 +32,19 @@
 [KG] Większość sali grała 2 lub 3\nt na naszej linii. 
 2\spades jest -1, przez
 nieuwagę nie obłożyliśmy, ale za -1 też byłby słaby zapis.
-Czy 2\nt na wznówce jest do gry...? Pewnie młode(?)
+Czy 2\nt na wznówce jest do gry...?
 
-[B] Wiemy, że mamy 23 pkt na linii, a dajemy przeciwnikowi grać 2\spades w zielonych. Przecież nawet 100 może być słabym zapisem! Trzeba cos zrobić, pała jest OK ale 2\nt lepsze, ze względu na bogatą w wysokie blotki kartę. Z niższymi blotkami X bardziej, bo 2\nt może się wywalać na sprzedanych złych podziałach.
-W rozgrywce przeciwnik przebił \xdiams3 czwórką kier, więc nie wsadziłem ósemki. Ale przynajmniej wist w trefla wyszedł.
+[B] Wiemy, że mamy 23 pkt na linii, 
+a dajemy przeciwnikowi grać 2\spades w zielonych. 
+Przecież nawet 100 może być słabym zapisem! 
+Trzeba cos zrobić, pała jest OK ale 2\nt 
+lepsze, ze względu na bogatą w wysokie blotki 
+kartę. Z niższymi blotkami \dbl bardziej, 
+bo 2\nt może się wywalać na sprzedanych złych 
+podziałach.
+W rozgrywce przeciwnik przebił \xdiams3 
+czwórką kier, więc nie wsadziłem ósemki. 
+Ale przynajmniej wist w trefla wyszedł.
 
 
 \pagebreak
@@ -62,7 +71,14 @@ drugą T\spades. Uznałam że trzeci K\spades u \nvul{W}
 jest bardzo prawdopodobny, jako że pokazał już
 (tylko) 2 blotki kier. Niestety król był drugi.
 
-[B] E spasował na otwarciu w korzystnych, co podnosi szanse na 3 trefle u W. Co dołożył E w pierwszej lewie? Jesli \xdiams 3 to koniec rozdania.
+[B] \nvul{E} spasował na otwarciu w korzystnych, 
+co podnosi szanse na 3 trefle u \nvul{W}. 
+Co dołożył \nvul{E} w pierwszej lewie? 
+Jesli \xdiams 3 to koniec rozdania.
+
+[KG] A no faktycznie, \nvul{E} spasował to nie ma 6
+trefli i dołożył ilościówkę/markę to ma 2 kara, było
+do wymyślenia.
 
 \pagebreak
 \section*{Rozdanie 3}
@@ -112,6 +128,10 @@ znaleźli się w 1\nt. Rozgrywający pokazał
 wziął pierwszą lewę na 7\spades. +2, 0\%.
 
 [B] Partner do zmiany.
+
+[KG] Nie no wist jakiś z dupy, chyba legitnie nie ma
+układu na który on jest lepszy od damy. A jak mam
+\xspades Q872 to kładąc 9 możesz wypuścić.
 
 \pagebreak
 \section*{Rozdanie 5}
@@ -364,7 +384,16 @@ a \nvul{S} dołożył dwójkę, która powinna być ilościówką,
 a nie mogła być z dubla (\nvul{N} miałby H85), może
 singiel u \nvul{S} był do wymyślenia.
 
-[B] Nie masz wcale dużo na ten blok. W tej odzywce nie chodzi o to, żeby koniecznie wyłączyć przeciwnika z licytacji jeli masz 2PC. Bardziej o to, żeby znajdować takie \textbf{dobre końcówki} jak tu - wcale nie musisz mieć dubelka kier a po rebidzie 3\hearts jest słabo. Niestety w tym przypadku bezsystemie przynosiło 70\%.
+[B] Nie masz wcale dużo na ten blok. 
+W tej odzywce nie chodzi o to, żeby 
+koniecznie wyłączyć przeciwnika z 
+licytacji jeli masz 2PC. Bardziej 
+o to, żeby znajdować takie 
+\textbf{dobre końcówki} jak tu - 
+wcale nie musisz mieć dubelka kier 
+a po rebidzie 3\hearts jest słabo. 
+Niestety w tym przypadku bezsystemie 
+przynosiło 70\%.
 
 
 \pagebreak
@@ -386,8 +415,14 @@ singiel u \nvul{S} był do wymyślenia.
     \end{tabular}
 \end{table}
 
-[Dlaczego oni grali w piki i czemu wzięli 11...?]
-Bo to nadal był ten smieszny pan na S.
+[KG] Dlaczego oni grali w piki i czemu wzięli 11...?
+
+[B] Bo to nadal był ten smieszny pan na \vul{S}.
+
+[KG] Aaa no tak. Wyłożył dziadka mówiąc: \textit{brak fitu to nie choroba}.
+Jak Rafcio na kadrze da znowu pytanie o ulubioną maksymę
+brydżową to mam nowego kandydata. I jeszcze po rozdaniu 
+się nas pytał jakiego wgl kontraktu tu by mógł szukać jak nie 4\spades XD
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -404,11 +439,25 @@ Bo to nadal był ten smieszny pan na S.
 	  \pass & 1\nt & \dbl & 4\diams \\
 	  \pass & 4\hearts & \pass & \pass \\
 	  4\spades & \dbl & \pass & 5\hearts \\
-
+      all \pass & & & \\
     \end{tabular}
 \end{table}
 
-[B] W obronie partner do wymiany. W licytacji natomiast jesli już mamy dawać 4\spades to lepiej od razu, bo wtedy by se zajęli ze złej ręki, co może robić. Sama odzywka jest imo graniczna, dobre rozczytanie, że na pewno nie obłożymy (krótkoć pik lub 9 kierów u oppsa) i że 8 lew jest na pewno. Raczej na impy taką próbę można podjąć, bo 500 vs 450 to nie tak dużo. Na impy X też będzie trochę mocniejsza.
+[B] W obronie partner do wymiany. W licytacji 
+natomiast jesli już mamy dawać 4\spades 
+to lepiej od razu, bo wtedy by se zajęli 
+ze złej ręki, co może robić. Sama odzywka 
+jest imo graniczna, dobre rozczytanie, że 
+na pewno nie obłożymy (krótkoć pik lub 9 
+kierów u oppsa) i że 8 lew jest na pewno. 
+Raczej na impy taką próbę można podjąć, 
+bo 500 vs 450 to nie tak dużo. Na impy 
+\dbl też będzie trochę mocniejsza.
+
+[KG] Trochę mnie powstrzymało, że zapytałam
+tego cwela w kapeluszu czy 4\diams to Texas, a on
+dał mi do zrozumienia, że nie wie xd No a potem
+tak jak mówisz, widać, że nie obłożymy.
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -466,8 +515,12 @@ Bo to nadal był ten smieszny pan na S.
     \end{tabular}
 \end{table}
 
-[B] X bez alertu, bez zawahania, ``Nie, nie wygrasz 2\hearts''. Z licytacją S się zgadzam. Wyniosłem, bo po takiej sekwencji wygląda, jakby piki się nie dzieliły i chcę uniknąć jakiego skrótowego disastera.
+[B] \dbl bez alertu, bez zawahania, ``Nie, nie wygrasz 2\hearts''. Z licytacją \nvul{S} się zgadzam. Wyniosłem, bo po takiej sekwencji wygląda, jakby piki się nie dzieliły i chcę uniknąć jakiego skrótowego disastera.
 
+[KG] O wow, nawet nie ogarnęłam, że on miał 5pc XD\\
+No i nie spodziewałam się po takiej licytacji, że partner jest tak silny.
+I ma 3 asy. 4\hearts idzie, więc obrona niby opłacalna,
+ale sala grała 4\spades\dbl-2.
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -510,7 +563,20 @@ Bo to nadal był ten smieszny pan na S.
 potem uzgodniliśmy, lepszy byłby pas na 4\nt i
 pała (atakująco-obronna?) na 5\clubs.
 
-[BS] Nie no chyba jest git. Teraz widzę, że karta raczej nie wygląda na 11 lew w kiery, szczególnie że te są pewnie 4-0. Trzeba zatłuc 5m. W mógł zrobić pięknego false-carda damą karo w pierwszej lewie, wtedy przebitka nie do wymylenia.
+[BS] Nie no chyba jest git. Teraz widzę, 
+że karta raczej nie wygląda na 11 lew w kiery, 
+szczególnie że te są pewnie 4-0. 
+Trzeba zatłuc 5m. W mógł 
+zrobić pięknego false-carda damą karo w 
+pierwszej lewie, wtedy przebitka nie do wymyślenia.
+
+[KG] Czy ja wiem? Po co miałbyś wistować w dubla w kolorze dziadka, 
+mając max. singla atu. False-card automatyczny, więc
+o niczym nie świadczy. Nie sądzę, żebyś nie miał innego wistu
+(jak widać tu miałeś neutralne \xhearts K albo pika),
+zwłaszcza, że chyba atutowy brzmi dobrze po takiej licytacji.
+Już nie mówiąc o szybkości wistu, ale powiedzmy, że
+na to bym nie popatrzyła :)
 
 \pagebreak
 \section*{Rozdanie 22}
@@ -575,12 +641,19 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		1\spades & \pass & 4\spades \\
-
+		1\spades & \pass & 4\spades & all \pass \\
     \end{tabular}
 \end{table}
 
-[B] Wejcie jest obowiązkowe. W najgorszym wypadku 300, ale przeważnie do chodzącej końcówki. Fit dostajesz na 90\% bo często wejdę 2\nt z singlem kier. 
+[B] Wejście jest obowiązkowe. W najgorszym wypadku 
+300, ale przeważnie do chodzącej końcówki. 
+Fit dostajesz na 90\% bo często wejdę 2\nt 
+z singlem kier. 
+
+[KG] No tak. Bałam się, bo w WJ mogą mieć dowolną siłę
+na takie coś. Ale w sumie często to jednak jest blok,
+a nie bilansowe z 3 kartowym fitem. Zwłaszcza na ostatnim
+stole na barometrze.
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -621,9 +694,10 @@ A w tych założeniach chyba lepsze byłoby 2\spades (9-12).
     \end{tabular}
 \end{table}
 
-[B] Trochę może swir, bo S na kontrę nie musi mieć nie wiadomo jakich nadwyżek. Ale to wygląda na jedyny grywalny kontrakt. Nikt na sali się nie odważył, grano jakies 3\nt z obory wyjęte.
-Może mogłem pomysleć, żeby ustawić kontrującego na wiscie, tylko jak? I tak przegram, ale obrona będzie musiała cos pograć.
-
+[B] Trochę może świr, bo \vul{S} na kontrę nie musi mieć nie wiadomo jakich nadwyżek. Ale to wygląda na jedyny grywalny kontrakt. Nikt na sali się nie odważył, grano jakies 3\nt z obory wyjęte.
+Może mogłem pomysleć, żeby ustawić kontrującego na 
+wiście, tylko jak? I tak przegram, 
+ale obrona będzie musiała coś pograć.
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -646,10 +720,12 @@ Może mogłem pomysleć, żeby ustawić kontrującego na wiscie, tylko jak? I ta
     \end{tabular}
 \end{table}
 
-[KG] Pół sali grało 4 lub 5 \hearts z pałą, nam
+[KG] Pół sali grało 4 lub 5\hearts z pałą, nam
 nie udało się wystarczająco sprowokować przeciwników...
 
 [BS] \rdbl fuj.
+
+[KG] E tam fuj.
 
 \pagebreak
 \section*{Rozdanie z turnieju czwartkowego 16.01.2025}
