--- a/analizy/krakow/2025_01_23_zaczek.tex
+++ b/analizy/krakow/2025_01_23_zaczek.tex
@@ -571,6 +571,26 @@ na 5\spades dostaliśmy 75 zamiast 100\%
 
 [KG] To moje rozdanie wieczoru ale jednocześnie jestem głąbem.
 Nie takim jak Giorgi z tą pałą, cokolwiek miała
-znaczyć, ale jednak. Wist w singla, 
+znaczyć, ale jednak. Wist w singla, zaimpasowany, przejęty królem,
+odwrót \xclubs 2. Po pierwsze Bartek zalavinthalował karo. Mogę łatwo wyjść
+małym karem i nawet jak rozgr ma 2 kara, dostać się do partnera (teraz, albo po wzięciu na
+\xhearts K). Ale nie, sekwens pikowy wyglądał bardziej kusząco. Wyszłam królem,
+od partnera 5, od rozgrywającego 2. Wzięte asem, doszłam na \xhearts K. Jeśli
+Bartek ma drugą dychę, mogę zebrać waleta i wyjść do przebitki (powinien mieć 2 kiery).
+Jeśli ma 4 piki lub nie ma dychy to wypuściłam wyjściem w pika. Nie tracąc
+nadziei wyszłam waletem, od partnera 4. Teraz już mam pewność, że ma dychę.
+Jeśli miałby 954 zrzuciłby 9 jako ilościówkę w pierwszej lewie (lub demarkę, wszystko jedno).
+Mając 4 piki zrzuciłby wyższą demarkę lub \xspades 4 jako ilościówkę. 
+A jeśli w pierwszej lewie zrzucił losowo środkową kartę (ja tak czasem robię xd)
+to w drugiej już wie że mam KQJ i szukam dojścia, więc oczekuję marki na dychę z Txx,
+a wyrzucenia np 9 z 9xx (demarki czy coś w tym stylu).
+Takie zrzutki nie miały
+sensu przy żadnej konfiguracji bez dychy. Teraz już pewnie wyszłam małym pikiem spod damy
+(choć nie ukrywam, że poczułam pewną ulgę gdy Bartek przejął dychą) 
+i dostałam przebitkę, -3.
+Rozgrywający utrudniłby mi zadanie, gdyby zostawił sobie dwójeczkę.
+
+I co z tego że znalazłam dojście do dychy spod KQJ jak mogłam zagrać
+karo jak człowiek XD
 
 \end{document}        
