--- a/analizy/krakow/2025_01_23_zaczek.tex
+++ b/analizy/krakow/2025_01_23_zaczek.tex
@@ -559,6 +559,8 @@ na 5\spades dostaliśmy 75 zamiast 100\%
 {\vhand{A87}{Q84}{AT3}{AQJ5}}
 {}
 
+\vspace*{-1cm}
+
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
@@ -568,6 +570,8 @@ na 5\spades dostaliśmy 75 zamiast 100\%
           \dbl & \pass & 2\hearts & all \pass \\
     \end{tabular}
 \end{table}
+
+\vspace*{-0.2cm}
 
 [KG] To moje rozdanie wieczoru ale jednocześnie jestem głąbem.
 Nie takim jak Giorgi z tą pałą, cokolwiek miała
@@ -581,16 +585,66 @@ Jeśli ma 4 piki lub nie ma dychy to wypuściłam wyjściem w pika. Nie tracąc
 nadziei wyszłam waletem, od partnera 4. Teraz już mam pewność, że ma dychę.
 Jeśli miałby 954 zrzuciłby 9 jako ilościówkę w pierwszej lewie (lub demarkę, wszystko jedno).
 Mając 4 piki zrzuciłby wyższą demarkę lub \xspades 4 jako ilościówkę. 
-A jeśli w pierwszej lewie zrzucił losowo środkową kartę (ja tak czasem robię xd)
-to w drugiej już wie że mam KQJ i szukam dojścia, więc oczekuję marki na dychę z Txx,
-a wyrzucenia np 9 z 9xx (demarki czy coś w tym stylu).
 Takie zrzutki nie miały
 sensu przy żadnej konfiguracji bez dychy. Teraz już pewnie wyszłam małym pikiem spod damy
 (choć nie ukrywam, że poczułam pewną ulgę gdy Bartek przejął dychą) 
 i dostałam przebitkę, -3.
-Rozgrywający utrudniłby mi zadanie, gdyby zostawił sobie dwójeczkę.
+Rozgrywający mógł utrudnić mi zadanie zostawiając sobie dwójeczkę,
+wtedy mógłby zaczynać z \xspades T96, a partner z \xspades 542. Czy wtedy w drugiej lewie dorzuca się
+2 czy 4?
 
-I co z tego że znalazłam dojście do dychy spod KQJ jak mogłam zagrać
+Ale co z tego że znalazłam dojście do dychy spod KQJ jak mogłam zagrać
 karo jak człowiek XD
+
+\pagebreak
+\section*{Dodatek: rozdanie 28 z 20.01.2025}
+\handdiagramv{\vhand{642}{J987}{KT}{QJ97}}
+{\vhand{KQ}{K6543}{874}{A52}}
+{\vhand{AJ}{QT2}{QJ965}{K83}}
+{\vhand{T98752}{A}{A32}{T64}}
+{NS}
+
+\vspace*{-1cm}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
+		  \alrts{2\diams} & \pass & 2\hearts & \pass \\
+          2\spades & \pass & \pass & 3\diams \\
+          \dbl & \pass & 3\spades & all \pass \\
+    \end{tabular}
+\end{table}
+
+\vspace*{-0.2cm}
+
+[KG] 3\diams ofc bez sensu. Ale rozgrywającemu udało się,
+jako jedynemu na sali, wziąć tylko 8 lew, więc uzyskaliśmy prawie 100\%.
+
+W obronie musieliśmy dobrze wykorzystać błąd rozgrywającego.
+Wist \xdiams K do asa, \xhearts A, przejście do
+\xclubs A, trefl wyrzucony na \xhearts K.
+Teraz rozgrywający nie wiedzieć czemu
+przebił kiera w ręce. To wypuszczało kontrakt.
+Zagrał pika do stołu, wzięłam asem. Nic nie szkodzi mi ściągnąć
+damę karo, tak też zrobiłam. W tym momencie znam
+count rozdania -- może o ile rozgrywający nie miał 7 pików,
+ale wtedy raczej otwarłby 3\spades. Muszę dostać się do partnera,
+żeby mógł wyjść w kiera promując mi \xspades J.
+Ale przed promocją musimy ściągnąć trefla. Jeśli tego nie
+zrobimy, do przebitego przeze mnie kiera rozgrywający wyrzuci 
+przegrywającego trefla i już nie weźmiemy lewy treflowej.
+Wiedząc to, powinnam ściągnąć \xclubs K i wyjść \xdiams 9
+do partnera, który powinien przebić i wyjść w kiera do promocji.
+Nie ściągając trefla (jak niestety zrobiłam) daję partnerowi szansę
+na pomyłkę. Na szczęście partner też ma informacje potrzebne
+do ściągnięcia \xclubs Q przed wyjściem do promocji.
+Rogrywający, który pokazał już 2 asy, na otwarcie multi nie może
+mieć jeszcze \xclubs K. Bartek ściągnął \xclubs Q i wyszedł do promocji
+-- obłożyliśmy -1.
+Dlaczego \xdiams 9 jest poprawna? Mam w ręce \xdiams J95,
+o czym partner wie. Wyjście małym lub waletem jest 
+\textit{normalne}, wyjście 9tką oznajmia, że
+coś się jeszcze w rozdaniu dzieje.
 
 \end{document}        
