--- a/analizy/krakow/kwb-2025-mixty.tex
+++ b/analizy/krakow/kwb-2025-mixty.tex
@@ -444,6 +444,8 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \end{tabular}
 \end{table}
 
+Zrolowałem lewkę za 4\%.
+
 \pagebreak
 \section*{Rozdanie 18}
 \handdiagramv{\vhand{82}{AKQJ43}{T3}{KJT}}
@@ -473,10 +475,15 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-		  -  &  -  &  -  & \\
-
-    \end{tabular}
+		  -  &  -  &  -  & 2\spades \\
+		  \pass & 2\nt & \pass & 3\spades\alrt \\
+		  \pass & 4\spades & \pass & \pass \\
+		  \pass
+		      \end{tabular}
 \end{table}
+
+panie sędzio żółta kartka za grę pasywną
+
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -490,10 +497,12 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-		\\
-
+		1\clubs & 1\nt & \pass & \pass \\
+		\pass
     \end{tabular}
 \end{table}
+
+No 2\hearts się daje
 
 \pagebreak
 \section*{Rozdanie 21}
@@ -507,10 +516,20 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-		  -  & & & \\
-
+		  -  & 1\nt & \pass & 2\clubs \\
+		  \pass & 2\hearts & \pass & 4\hearts \\
+		  \pass & \pass & \pass
     \end{tabular}
 \end{table}
+
+Wist \xhearts J.
+
+Zdezorientowany zabiłem Asem i zagrałem 2 razy kiera z góry. W zdziwiony, że nie wyciąłem mu damy, wyszedł w trefla (podziękowałem w myśli).
+Ściągnąłem 3 trefle, wyrzuciłem karo i zagrałem karo do Q i \xdiams K. E wyszła w pika i sclaimowałem 11 lew.
+
+Ale zaraz zaraz, ten wpust nie działa! E może wyjść \textbf{waletem karo} przygważdżając moją singlową dziesiątkę!
+
+Zgrywając ostatniego trefla ustawiłem swoją rękę w przymusie wy-pustkowym. A forta mogła spokojnie poczekać!
 
 \pagebreak
 \section*{Rozdanie 22}
@@ -524,10 +543,16 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-		  -  &  -  & & \\
-
+		  -  &  -  & \pass & 2\hearts\alrt \\
+		  2\spades & \dbl & \pass & \pass \\
+		  \rdbl & \pass & \pass & \pass
     \end{tabular}
 \end{table}
+
+Dlaczego zawsze na tych gości się dzieje jakaś obora. Nie wiem czy mam na kontrę ale widząc, że mamy 21-24 punkty pewspektywa wzięcia 200 jest 
+nadwyraz kusząca. Szczególnie, że wejście nie zostanie powtórzone przez salę. Uznałem, że kontra to 80\% na 100\% i 20\% na zero. +EV. Akurat co ciekawe 200 dawało tylko 73\% bo 
+ludzie grali 3\spades\dbl
+
 
 \pagebreak
 \section*{Rozdanie 23}
@@ -541,10 +566,14 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-		  -  &  -  &  -  & \\
+		  -  &  -  &  -  & 1\nt \\
+		  \pass & 3\diams & \pass & 3\nt \\
+		  \pass & \pass & \pass
 
     \end{tabular}
 \end{table}
+
+3\diams jakieś sus.
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -558,10 +587,15 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		\\
-
+		1\nt & \pass & 2\clubs & \pass \\
+		2\hearts & \pass & 3\diams & \pass \\
+		4\clubs & \pass & 5\clubs & \pass \\
+		5\diams & \pass & \pass & \pass 
     \end{tabular}
 \end{table}
+
+Rozjazd zakończony idiotycznym zrolowaniem dwóch lew w czapowym 5\diams.
+
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -575,10 +609,12 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-		  -  & & & \\
-
+		  -  & 1\hearts & \pass & 2\hearts \\
+		  \dbl & \pass & 2\spades & \pass \\
+		  \pass & \pass
     \end{tabular}
 \end{table}
+rozgrywka nienajlepsza, obrona fachowa. Bez dwóch.
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -592,10 +628,23 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-		  -  &  -  & & \\
-
+		  -  &  -  & 1\clubs\alrt & \pass  \\
+		  2\clubs\alrt & \pass & 2\diams\alrt & \pass \\
+		  2\hearts\alrt & \pass & 3\clubs & \pass \\
+		  3\diams & \pass & 4\diams & \pass \\
+		  5\clubs & \pass & 5\diams & \pass \\
+		  \pass & \pass
     \end{tabular}
 \end{table}
+
+Znowu rozjazd, ale przynajmniej nie zagraliśmy 3\nt.
+
+\begin{itemize}
+	\item 2\clubs = \gf bez starszej czwórki, może mieć dużo kar
+	\item 2\diams = skład równy 
+	\item 2\hearts = relay
+	\item 3\clubs = 5\clubs
+\end{itemize}
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -609,10 +658,15 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		  -  &  -  &  -  & \\
+		  -  &  -  &  -  & \pass \\
+		 1\diams & 1\hearts & \dbl\alrt & 2\hearts \\
+		 \dbl & \pass & 3\spades & \pass \\
+		 \pass & \pass 
 
     \end{tabular}
 \end{table}
+
+Wist \xhearts A i zmiana na karo, wzięte w ręce. E zagrał \xclubs Q do Króla, odepchnąłem się kierem - wzięte w ręce. Teraz karo do Asa. Trefl 2 razy i... stół wpuszczony! Musi trafiać, a że z bilansu ja mam więcej to został zagrany impas. Noga.
 
 \pagebreak
 \section*{Rozdanie 28}
@@ -626,10 +680,13 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-		\\
-
+		\pass & 1\diams & \pass & 3\clubs\alrt \\
+		\pass & 3\diams & \pass & \pass \\
+		\pass
     \end{tabular}
 \end{table}
+
+Instynkt z pokazaniem 0-6 nie zawiódł.
 
 \pagebreak
 \section*{Rozdanie 29}
@@ -648,6 +705,9 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \end{tabular}
 \end{table}
 
+szkoda gadać skompromitowałem się, czas na kolbe. A taki ładny wpust by był, gdybym policzył ile już oddałem.
+
+
 \pagebreak
 \section*{Rozdanie 30}
 \handdiagramv{\vhand{QJ86}{AQ8}{QT82}{J7}}
@@ -660,9 +720,14 @@ Wrongsided więc nie dołożyłem choć nie otworzywszy 22-23 ugryzłem się w j
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-		  -  &  -  & & \\
+		  -  &  -  & \pass  & 1\clubs \\	
+		\pass & 1\spades & \pass & 1\nt \\
+		\pass & 3\nt & \pass & \pass \\
+		\pass 
 
     \end{tabular}
 \end{table}
+
+Energia niewykonanego wpustu przeszła na to rozdanie, w którym pan Janusz poczuł się wpuszczony na wiście i wyszedł w trelfa.
 
 \end{document}        
